Enabled use of vector API in Lucene